[package]
name = "telegram-bot"
version = "0.6.1"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>"]
edition = "2018"
description = "A library for creating Telegram bots"

documentation = "https://docs.rs/telegram-bot/"
repository = "https://github.com/telegram-rs/telegram-bot"
readme = "../README.md"

keywords = ["telegram", "bot", "chat", "api"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[dependencies]
antidote = "1.0"
tokio = "0.2"
error-chain = "0.11.0"
tokio-timer = "0.2"
futures = "0.3"

telegram-bot-raw = { version = "=0.6.1", path = "../raw" }

[dependencies.hyper]
version = "0.13"
optional = true

[dependencies.hyper-tls]
version = "0.4"
optional = true

[features]
default = ["hyper_connector"]

hyper_connector = ["hyper", "hyper-tls"]
